compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__unqualified_imported_no_label_typescript.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 369
expression: "import other.{Two}\npub fn main() {\n  Two(1)\n}"
snapshot_kind: text
---
----- SOURCE CODE
import other.{Two}
pub fn main() {
  Two(1)
}

----- TYPESCRIPT DEFINITIONS
import type * as $other from "../other.d.mts";

export function main(): $other.One$;
