compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__unqualified_imported_using_label.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 391
expression: "import other.{Two}\npub fn main() {\n  Two(field: 1)\n}"
snapshot_kind: text
---
----- SOURCE CODE
-- other.gleam
pub type One { Two(field: Int) }

-- main.gleam
import other.{Two}
pub fn main() {
  Two(field: 1)
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";
import { Two } from "../other.mjs";

export function main() {
  return new Two(1);
}
