compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__variant_defined_in_another_module_qualified_expression.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 847
expression: "\nimport other_module\n\npub fn check(x) -> Bool {\n  x == other_module.Variant\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- other_module.gleam
pub type Thingy { Variant OtherVariant }

-- main.gleam

import other_module

pub fn check(x) -> Bool {
  x == other_module.Variant
}


----- COMPILED JAVASCRIPT
import * as $other_module from "../other_module.mjs";

export function check(x) {
  return x instanceof $other_module.Variant;
}
