compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__variant_defined_in_another_module_unqualified_clause_guard.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 909
expression: "\nimport other_module.{Variant}\n\npub fn process(e) -> String {\n  case e {\n    value if value == Variant -> \"match\"\n    _ -> \"no match\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- other_module.gleam
pub type Thingy { Variant Other(Int) }

-- main.gleam

import other_module.{Variant}

pub fn process(e) -> String {
  case e {
    value if value == Variant -> "match"
    _ -> "no match"
  }
}


----- COMPILED JAVASCRIPT
import * as $other_module from "../other_module.mjs";
import { Variant } from "../other_module.mjs";

export function process(e) {
  let value = e;
  if (value instanceof Variant) {
    return "match";
  } else {
    return "no match";
  }
}
